--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   
   <header>
     <div class="container-fluid">
-      <div class="row justify-content-between align-left">
+      <div class="row flex-nowrap justify-content-between align-left">
         <div class="col header-col">
-          <img src="images/logo.svg" class="header-logo">
+          <img src="images/logo.svg" class="header-logo img-fluid">
         </div>
         <div class="col header-col-2">
           <button type="button" class="btn btn-outline-warning">Try It Free</button>
